<resources>
    <string name="app_name">Music Player</string>

    <string name="hello_world">Hello world! This is a sample app</string>
    <string name="action_settings">Settings</string>
    <string name="image_desc">Music Description</string>
    <string name="song_name">Name of the Song</string>
    <string name="artist_name">Name of the Artist</string>
    <string name="rewind">&lt;&lt;</string>
    <string name="play">&gt;</string>
    <string name="pause">||</string>
    <string name="forward">&gt;&gt;</string>
</resources>
