<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_desc"
        android:adjustViewBounds="true"
        android:src="@drawable/music_symbol"
        android:id="@+id/image_view"
        android:maxWidth="350dp"
        android:maxHeight="350dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="25dp"
        android:id="@+id/song_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image_view"
        android:paddingTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:textSize="12dp"
        android:id="@+id/artist_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/song_name"
        android:paddingTop="5dp"/>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/song_name"
        android:layout_centerHorizontal="true"
        android:paddingTop="23dp"/>


    <Button
        android:id="@+id/rewind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewind"
        android:layout_below="@+id/seekbar"/>

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_toRightOf="@+id/rewind"
        android:layout_below="@+id/seekbar"/>

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_toRightOf="@+id/play"
        android:layout_below="@+id/seekbar"/>

    <Button
        android:id="@+id/fast_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:layout_toRightOf="@+id/pause"
        android:layout_below="@+id/seekbar"/>

</RelativeLayout>